--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="site-header">
       <nav class="nav">
-        <a class="logo" href="#about">Swachandrika Rudra</a>
+        <a class="logo" href="#home">Swachandrika Rudra</a>
         <div class="nav-actions">
           <a href="#experience">Experience</a>
           <a href="#projects">Projects</a>
@@ -28,7 +28,7 @@
     </header>
 
     <main>
-      <section id="about" class="section hero">
+      <section id="home" class="section hero">
         <div class="hero-copy">
           <p class="eyebrow">Data Scientist · Los Angeles, CA</p>
           <h1>Building reliable data products that make complex decisions simple.</h1>
@@ -43,10 +43,10 @@
             >
             <a
               class="button ghost"
-              href="assets/resume.png"
+              href="https://www.linkedin.com/in/swachandrika-rudra/"
               target="_blank"
               rel="noreferrer"
-              >View Resume</a
+              >Connect on LinkedIn</a
             >
           </div>
           <div class="meta">
@@ -74,6 +74,63 @@
             </ul>
           </div>
         </aside>
+      </section>
+
+      <section id="about" class="section">
+        <div class="section-header">
+          <h2>About</h2>
+          <p>Hover to expand each section.</p>
+        </div>
+
+        <div class="hover-grid">
+          <article class="hover-card">
+            <div class="hover-card-header">
+              <h3>About Me</h3>
+              <span>Applied data science</span>
+            </div>
+            <ul>
+              <li>Product analytics, ML research, and data engineering.</li>
+              <li>Translate complex data into clear, decision-ready insights.</li>
+              <li>Focused on reliability, explainability, and real-world impact.</li>
+            </ul>
+          </article>
+
+          <article class="hover-card">
+            <div class="hover-card-header">
+              <h3>This Site</h3>
+              <span>Simple &amp; dynamic</span>
+            </div>
+            <ul>
+              <li>Built as a living portfolio of applied work.</li>
+              <li>Designed to be clean, fast, and easy to scan.</li>
+              <li>Hosted on GitHub Pages for instant updates.</li>
+            </ul>
+          </article>
+
+          <article class="hover-card">
+            <div class="hover-card-header">
+              <h3>Work Style</h3>
+              <span>Learning by building</span>
+            </div>
+            <ul>
+              <li>Iterative, experiment-driven approach to products.</li>
+              <li>Strong bias toward measurable outcomes and clarity.</li>
+              <li>Collaborative partner with engineering and design.</li>
+            </ul>
+          </article>
+
+          <article class="hover-card">
+            <div class="hover-card-header">
+              <h3>Beyond Work</h3>
+              <span>Curiosity &amp; community</span>
+            </div>
+            <ul>
+              <li>Enjoy research, visual storytelling, and mentoring.</li>
+              <li>Always exploring how AI can improve everyday decisions.</li>
+              <li>Open to collaborations and community projects.</li>
+            </ul>
+          </article>
+        </div>
       </section>
 
       <section id="experience" class="section">
