--- a/index.html
+++ b/index.html
@@ -77,69 +77,38 @@
       </section>
 
       <section id="about" class="section">
-        <div class="section-header">
-          <h2>About</h2>
-          <p>Hover to expand each section.</p>
-        </div>
-
-        <div class="hover-grid">
-          <article class="hover-card">
-            <div class="hover-card-header">
+        <div class="section-split">
+          <div class="section-title">
+            <h2>About</h2>
+          </div>
+          <div class="section-body">
+            <div class="about-block">
               <h3>About Me</h3>
-              <span>Applied data science</span>
+              <p>
+                I am a data scientist focused on product analytics, ML research,
+                and data engineering. I translate complex data into clear,
+                decision-ready insights with a focus on reliability and impact.
+              </p>
             </div>
-            <ul>
-              <li>Product analytics, ML research, and data engineering.</li>
-              <li>Translate complex data into clear, decision-ready insights.</li>
-              <li>Focused on reliability, explainability, and real-world impact.</li>
-            </ul>
-          </article>
-
-          <article class="hover-card">
-            <div class="hover-card-header">
+            <div class="about-block">
               <h3>This Site</h3>
-              <span>Simple &amp; dynamic</span>
+              <p>
+                Built as a living portfolio of applied work. Designed to be
+                clean, fast, and easy to scan, with subtle interactions that
+                reveal detail on hover.
+              </p>
             </div>
-            <ul>
-              <li>Built as a living portfolio of applied work.</li>
-              <li>Designed to be clean, fast, and easy to scan.</li>
-              <li>Hosted on GitHub Pages for instant updates.</li>
-            </ul>
-          </article>
-
-          <article class="hover-card">
-            <div class="hover-card-header">
-              <h3>Work Style</h3>
-              <span>Learning by building</span>
-            </div>
-            <ul>
-              <li>Iterative, experiment-driven approach to products.</li>
-              <li>Strong bias toward measurable outcomes and clarity.</li>
-              <li>Collaborative partner with engineering and design.</li>
-            </ul>
-          </article>
-
-          <article class="hover-card">
-            <div class="hover-card-header">
-              <h3>Beyond Work</h3>
-              <span>Curiosity &amp; community</span>
-            </div>
-            <ul>
-              <li>Enjoy research, visual storytelling, and mentoring.</li>
-              <li>Always exploring how AI can improve everyday decisions.</li>
-              <li>Open to collaborations and community projects.</li>
-            </ul>
-          </article>
+          </div>
         </div>
       </section>
 
       <section id="experience" class="section">
-        <div class="section-header">
-          <h2>Experience</h2>
-          <p>Hover to reveal details, mirroring the clean timeline feel.</p>
-        </div>
-
-        <div class="timeline">
+        <div class="section-split">
+          <div class="section-title">
+            <h2>Experience</h2>
+          </div>
+          <div class="section-body">
+            <div class="timeline">
           <article class="timeline-item">
             <div class="timeline-dot is-active"></div>
             <div class="timeline-content">
@@ -230,17 +199,19 @@
               </ul>
             </div>
           </article>
+            </div>
+          </div>
         </div>
       </section>
 
       <section id="projects" class="section">
-        <div class="section-header">
-          <h2>Projects</h2>
-          <p>Hover to expand details.</p>
-        </div>
-
-        <div class="grid">
-          <article class="card hover-expand">
+        <div class="section-split">
+          <div class="section-title">
+            <h2>Projects</h2>
+          </div>
+          <div class="section-body">
+            <div class="simple-list">
+              <article class="simple-item hover-expand">
             <h3>Golgi - A Healthcare Search Engine</h3>
             <p class="card-meta">Aug 2025</p>
             <p class="card-summary">
@@ -251,9 +222,9 @@
               <li>Streamlit app with analytics, summaries, and export.</li>
               <li>40% faster retrieval in test cases.</li>
             </ul>
-          </article>
+              </article>
 
-          <article class="card hover-expand">
+              <article class="simple-item hover-expand">
             <h3>Generative AI for Small Molecule Discovery</h3>
             <p class="card-meta">Dec 2024</p>
             <p class="card-summary">
@@ -264,7 +235,9 @@
               <li>Validated with RDKit for drug-likeness.</li>
               <li>80% validity, 75% novelty, QED = 0.62.</li>
             </ul>
-          </article>
+              </article>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -322,12 +295,12 @@
       </section>
 
       <section id="education" class="section">
-        <div class="section-header">
-          <h2>Education</h2>
-          <p>Hover to reveal coursework and honors.</p>
-        </div>
-
-        <div class="timeline">
+        <div class="section-split">
+          <div class="section-title">
+            <h2>Education</h2>
+          </div>
+          <div class="section-body">
+            <div class="timeline">
           <article class="timeline-item">
             <div class="timeline-dot is-active"></div>
             <div class="timeline-content">
@@ -361,44 +334,52 @@
               </ul>
             </div>
           </article>
+            </div>
+          </div>
         </div>
       </section>
 
       <section id="certifications" class="section">
-        <div class="section-header">
-          <h2>Certifications</h2>
-          <p>Hover to expand details.</p>
-        </div>
-        <div class="hover-grid">
-          <article class="hover-card">
-            <div class="hover-card-header">
-              <h3>AWS AI &amp; ML Scholar 2025</h3>
-              <span>Summer 2025 Cohort</span>
-            </div>
-            <ul>
-              <li>AWS Machine Learning Fundamentals Nanodegree program.</li>
-            </ul>
-          </article>
+        <div class="section-split">
+          <div class="section-title">
+            <h2>Certifications</h2>
+          </div>
+          <div class="section-body">
+            <div class="simple-list">
+              <article class="simple-item hover-expand">
+                <h3>AWS AI &amp; ML Scholar 2025</h3>
+                <p class="card-meta">Summer 2025 Cohort</p>
+                <p class="card-summary">
+                  AWS Machine Learning Fundamentals Nanodegree program.
+                </p>
+                <ul>
+                  <li>Selected for the AWS scholarship cohort.</li>
+                </ul>
+              </article>
 
-          <article class="hover-card">
-            <div class="hover-card-header">
-              <h3>Microsoft Certified: Fabric Data Engineer Associate</h3>
-              <span>Mar 2025</span>
-            </div>
-            <ul>
-              <li>Certified in Microsoft Fabric data engineering workflows.</li>
-            </ul>
-          </article>
+              <article class="simple-item hover-expand">
+                <h3>Microsoft Certified: Fabric Data Engineer Associate</h3>
+                <p class="card-meta">Mar 2025</p>
+                <p class="card-summary">
+                  Microsoft Fabric data engineering credential.
+                </p>
+                <ul>
+                  <li>Certified in data ingestion, modeling, and orchestration.</li>
+                </ul>
+              </article>
 
-          <article class="hover-card">
-            <div class="hover-card-header">
-              <h3>AWS AI &amp; ML Scholar 2024</h3>
-              <span>Winter 2024 Cohort</span>
+              <article class="simple-item hover-expand">
+                <h3>AWS AI &amp; ML Scholar 2024</h3>
+                <p class="card-meta">Winter 2024 Cohort</p>
+                <p class="card-summary">
+                  AI Programming with Python Nanodegree Program.
+                </p>
+                <ul>
+                  <li>Python, ML foundations, and deployment basics.</li>
+                </ul>
+              </article>
             </div>
-            <ul>
-              <li>AI Programming with Python Nanodegree Program.</li>
-            </ul>
-          </article>
+          </div>
         </div>
       </section>
 
