--- a/index.html
+++ b/index.html
@@ -244,51 +244,40 @@
       <section id="skills" class="section">
         <div class="section-header">
           <h2>Technical Skills</h2>
-          <p>Tools and platforms I rely on for production-grade work.</p>
+          <p>Venn view of tools and focus areas.</p>
         </div>
-        <div class="skills-grid">
-          <div>
-            <h3>Languages</h3>
-            <div class="tags">
-              <span>Python</span><span>SQL</span><span>R</span><span>Java</span
-              ><span>JavaScript</span><span>C</span>
+        <div class="venn">
+          <div class="venn-circle venn-ai">
+            <h3>AI / ML</h3>
+            <div class="venn-list">
+              <span>TensorFlow</span><span>PyTorch</span><span>scikit-learn</span>
+              <span>MLflow</span><span>Keras</span><span>OpenCV</span>
             </div>
           </div>
-          <div>
-            <h3>AI/ML</h3>
-            <div class="tags">
-              <span>TensorFlow</span><span>PyTorch</span><span>scikit-learn</span
-              ><span>MLflow</span><span>Keras</span><span>OpenCV</span>
-            </div>
-          </div>
-          <div>
-            <h3>Cloud</h3>
-            <div class="tags">
-              <span>AWS</span><span>EC2</span><span>Lambda</span
-              ><span>SageMaker</span><span>GCP</span><span>BigQuery</span
-              ><span>Azure</span><span>Synapse</span><span>ML Studio</span>
-            </div>
-          </div>
-          <div>
-            <h3>DevOps &amp; Tools</h3>
-            <div class="tags">
-              <span>Docker</span><span>Git</span><span>CI/CD</span>
-            </div>
-          </div>
-          <div>
+          <div class="venn-circle venn-de">
             <h3>Data Engineering</h3>
-            <div class="tags">
-              <span>Apache Spark</span><span>Databricks</span
-              ><span>Hadoop</span><span>ETL/ELT</span>
+            <div class="venn-list">
+              <span>Apache Spark</span><span>Databricks</span><span>Hadoop</span>
+              <span>ETL/ELT</span><span>BigQuery</span><span>Synapse</span>
             </div>
           </div>
-          <div>
+          <div class="venn-circle venn-analytics">
             <h3>Analytics</h3>
-            <div class="tags">
-              <span>Tableau</span><span>Power BI</span><span>Streamlit</span
-              ><span>Plotly</span><span>D3.js</span><span>Jupyter</span
-              ><span>Google Analytics</span><span>Matplotlib</span
-              ><span>Seaborn</span><span>ggplot2</span>
+            <div class="venn-list">
+              <span>Tableau</span><span>Power BI</span><span>Streamlit</span>
+              <span>Plotly</span><span>D3.js</span><span>Jupyter</span>
+              <span>Matplotlib</span><span>Seaborn</span><span>ggplot2</span>
+            </div>
+          </div>
+          <div class="venn-center">
+            <h3>Shared Stack</h3>
+            <div class="venn-list">
+              <span>Python</span><span>SQL</span><span>R</span>
+              <span>Java</span><span>JavaScript</span><span>C</span>
+              <span>AWS</span><span>EC2</span><span>Lambda</span>
+              <span>SageMaker</span><span>GCP</span><span>Azure</span>
+              <span>ML Studio</span><span>Docker</span><span>Git</span><span>CI/CD</span>
+              <span>Google Analytics</span>
             </div>
           </div>
         </div>
