--- a/index.html
+++ b/index.html
@@ -250,33 +250,38 @@
           <div class="venn-circle venn-ai">
             <h3>AI / ML</h3>
             <div class="venn-list">
-              <span>TensorFlow</span><span>PyTorch</span><span>scikit-learn</span>
-              <span>MLflow</span><span>Keras</span><span>OpenCV</span>
+              <span>TensorFlow</span> <span>PyTorch</span>
+              <span>scikit-learn</span> <span>MLflow</span>
+              <span>Keras</span> <span>OpenCV</span>
             </div>
           </div>
           <div class="venn-circle venn-de">
             <h3>Data Engineering</h3>
             <div class="venn-list">
-              <span>Apache Spark</span><span>Databricks</span><span>Hadoop</span>
-              <span>ETL/ELT</span><span>BigQuery</span><span>Synapse</span>
+              <span>Apache Spark</span> <span>Databricks</span>
+              <span>Hadoop</span> <span>ETL/ELT</span>
+              <span>BigQuery</span> <span>Synapse</span>
             </div>
           </div>
           <div class="venn-circle venn-analytics">
             <h3>Analytics</h3>
             <div class="venn-list">
-              <span>Tableau</span><span>Power BI</span><span>Streamlit</span>
-              <span>Plotly</span><span>D3.js</span><span>Jupyter</span>
-              <span>Matplotlib</span><span>Seaborn</span><span>ggplot2</span>
+              <span>Tableau</span> <span>Power BI</span>
+              <span>Streamlit</span> <span>Plotly</span>
+              <span>D3.js</span> <span>Jupyter</span>
+              <span>Matplotlib</span> <span>Seaborn</span>
+              <span>ggplot2</span>
             </div>
           </div>
           <div class="venn-center">
             <h3>Shared Stack</h3>
             <div class="venn-list">
-              <span>Python</span><span>SQL</span><span>R</span>
-              <span>Java</span><span>JavaScript</span><span>C</span>
-              <span>AWS</span><span>EC2</span><span>Lambda</span>
-              <span>SageMaker</span><span>GCP</span><span>Azure</span>
-              <span>ML Studio</span><span>Docker</span><span>Git</span><span>CI/CD</span>
+              <span>Python</span> <span>SQL</span> <span>R</span>
+              <span>Java</span> <span>JavaScript</span> <span>C</span>
+              <span>AWS</span> <span>EC2</span> <span>Lambda</span>
+              <span>SageMaker</span> <span>GCP</span> <span>Azure</span>
+              <span>ML Studio</span> <span>Docker</span>
+              <span>Git</span> <span>CI/CD</span>
               <span>Google Analytics</span>
             </div>
           </div>
