--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="logo" href="#home">Swachandrika Rudra</a>
         <div class="nav-actions">
           <a href="#experience">Experience</a>
-          <a href="#projects">Projects</a>
+          <a href="projects.html" target="_blank" rel="noreferrer">Projects</a>
           <a href="#contact">Contact</a>
           <button class="theme-toggle" type="button" aria-label="Toggle theme">
             Toggle Theme
@@ -204,42 +204,6 @@
         </div>
       </section>
 
-      <section id="projects" class="section">
-        <div class="section-split">
-          <div class="section-title">
-            <h2>Projects</h2>
-          </div>
-          <div class="section-body">
-            <div class="simple-list">
-              <article class="simple-item hover-expand">
-            <h3>Golgi - A Healthcare Search Engine</h3>
-            <p class="card-meta">Aug 2025</p>
-            <p class="card-summary">
-              LLM-powered healthcare search across 50+ trusted sources.
-            </p>
-            <ul>
-              <li>Query expansion, BM25 re-ranking, and confidence scoring.</li>
-              <li>Streamlit app with analytics, summaries, and export.</li>
-              <li>40% faster retrieval in test cases.</li>
-            </ul>
-              </article>
-
-              <article class="simple-item hover-expand">
-            <h3>Generative AI for Small Molecule Discovery</h3>
-            <p class="card-meta">Dec 2024</p>
-            <p class="card-summary">
-              Feedback-GAN pipeline for de novo drug discovery.
-            </p>
-            <ul>
-              <li>Autoencoder latent space + Wasserstein GAN.</li>
-              <li>Validated with RDKit for drug-likeness.</li>
-              <li>80% validity, 75% novelty, QED = 0.62.</li>
-            </ul>
-              </article>
-            </div>
-          </div>
-        </div>
-      </section>
 
 
       <section id="education" class="section">
