--- a/projects.html
+++ b/projects.html
@@ -36,55 +36,89 @@
 
       <section class="section project-feature">
         <div class="section-header">
-          <h2>Outlier Hunt: Lab Result QA</h2>
+          <h2>Whack-a-Bug: A/B UX Experiment</h2>
           <p>
-            Click suspicious points to flag anomalies. Learn how precision and
-            recall change as you tune detection sensitivity.
+            You are randomly assigned to Variant A or B. Play the game, then see
+            how design choices shift engagement metrics.
           </p>
         </div>
 
-        <div class="hunt-grid">
-          <div class="hunt-card">
+        <div class="whack-grid">
+          <div class="whack-card">
             <h3>Try It</h3>
-            <p class="hunt-sub">
-              You are reviewing lab results before they hit the dashboard. Find
-              the anomalies hidden in the scatter.
+            <p class="whack-sub">
+              Click bugs as they pop up. Your session contributes to the live
+              experiment summary.
             </p>
-            <div class="hunt-stats">
-              <span>Selected: <strong id="selectedCount">0</strong></span>
-              <span>Correct: <strong id="foundCount">0</strong></span>
-              <span>Total Anomalies: <strong id="totalAnomalies">6</strong></span>
+            <div class="whack-meta">
+              <span>Variant: <strong id="variantLabel">A</strong></span>
+              <span>Speed: <strong id="variantSpeed">900ms</strong></span>
+              <span>Grid: <strong id="variantGrid">3x3</strong></span>
             </div>
-            <div class="hunt-actions">
-              <button class="button primary" id="scoreBtn" type="button">
-                Score
+            <div class="whack-controls">
+              <button class="button primary" id="startGame" type="button">
+                Start
               </button>
-              <button class="button ghost" id="revealBtn" type="button">
-                Reveal
-              </button>
-              <button class="button ghost" id="resetBtn" type="button">
+              <button class="button ghost" id="resetGame" type="button">
                 Reset
               </button>
             </div>
-            <div class="hunt-results" id="huntResults">
-              <p>
-                Precision and recall will appear here after you score your picks.
-              </p>
+            <div class="whack-stats">
+              <div>
+                <p>Time</p>
+                <h3 id="timeLeft">30</h3>
+              </div>
+              <div>
+                <p>Hits</p>
+                <h3 id="hits">0</h3>
+              </div>
+              <div>
+                <p>Misses</p>
+                <h3 id="misses">0</h3>
+              </div>
+              <div>
+                <p>Accuracy</p>
+                <h3 id="accuracy">0%</h3>
+              </div>
             </div>
           </div>
 
-          <div class="hunt-card">
-            <svg
-              id="huntPlot"
-              class="hunt-plot"
-              viewBox="0 0 420 280"
-              role="img"
-              aria-label="Scatter plot of lab results"
-            ></svg>
-            <div class="hunt-legend">
-              <span class="legend-dot"></span> Normal
-              <span class="legend-dot anomaly"></span> Anomaly (revealed)
-              <span class="legend-dot selected"></span> Your pick
+          <div class="whack-card">
+            <div id="whackBoard" class="whack-board" role="grid"></div>
+            <p class="whack-note" id="gameNote">
+              Hit rate and accuracy help compare UX variants.
+            </p>
+          </div>
+        </div>
+
+        <div class="whack-summary">
+          <div>
+            <h3>Experiment Summary</h3>
+            <p>
+              After you play, this summary updates with your session metrics and
+              highlights which variant feels more engaging.
+            </p>
+          </div>
+          <div class="whack-summary-grid">
+            <div class="summary-card">
+              <p>Variant A Avg Hits</p>
+              <h3 id="avgHitsA">8</h3>
+              <span>Control: calmer pace</span>
+            </div>
+            <div class="summary-card">
+              <p>Variant B Avg Hits</p>
+              <h3 id="avgHitsB">11</h3>
+              <span>Treatment: faster pace</span>
+            </div>
+            <div class="summary-card">
+              <p>Accuracy Delta</p>
+              <h3 id="accDelta">-6%</h3>
+              <span>Speed can reduce precision</span>
+            </div>
+            <div class="summary-card">
+              <p>Recommendation</p>
+              <h3 id="recommendation">Ship B with tuning</h3>
+              <span>Balance engagement + accuracy</span>
             </div>
           </div>
         </div>
@@ -130,141 +164,144 @@
     </footer>
 
     <script>
-      const plot = document.getElementById("huntPlot");
-      const selectedCount = document.getElementById("selectedCount");
-      const foundCount = document.getElementById("foundCount");
-      const totalAnomalies = document.getElementById("totalAnomalies");
-      const scoreBtn = document.getElementById("scoreBtn");
-      const revealBtn = document.getElementById("revealBtn");
-      const resetBtn = document.getElementById("resetBtn");
-      const huntResults = document.getElementById("huntResults");
+      const variant = Math.random() < 0.5 ? "A" : "B";
+      const variantLabel = document.getElementById("variantLabel");
+      const variantSpeed = document.getElementById("variantSpeed");
+      const variantGrid = document.getElementById("variantGrid");
+      const startGame = document.getElementById("startGame");
+      const resetGame = document.getElementById("resetGame");
+      const whackBoard = document.getElementById("whackBoard");
+      const timeLeft = document.getElementById("timeLeft");
+      const hits = document.getElementById("hits");
+      const misses = document.getElementById("misses");
+      const accuracy = document.getElementById("accuracy");
+      const gameNote = document.getElementById("gameNote");
+      const avgHitsA = document.getElementById("avgHitsA");
+      const avgHitsB = document.getElementById("avgHitsB");
+      const accDelta = document.getElementById("accDelta");
+      const recommendation = document.getElementById("recommendation");
 
-      const data = [
-        { x: 12, y: 18 }, { x: 18, y: 30 }, { x: 22, y: 42 },
-        { x: 28, y: 55 }, { x: 32, y: 35 }, { x: 35, y: 62 },
-        { x: 38, y: 48 }, { x: 42, y: 58 }, { x: 45, y: 66 },
-        { x: 48, y: 52 }, { x: 52, y: 40 }, { x: 55, y: 60 },
-        { x: 60, y: 50 }, { x: 62, y: 62 }, { x: 66, y: 44 },
-        { x: 70, y: 56 }, { x: 74, y: 46 }, { x: 78, y: 58 },
-        { x: 82, y: 50 }, { x: 86, y: 42 }, { x: 90, y: 55 },
-        { x: 14, y: 65 }, { x: 24, y: 28 }, { x: 36, y: 30 },
-        { x: 58, y: 72 }, { x: 64, y: 30 }
-      ];
-      const anomalies = [
-        { x: 5, y: 90 }, { x: 95, y: 12 }, { x: 88, y: 92 },
-        { x: 8, y: 12 }, { x: 92, y: 62 }, { x: 40, y: 95 }
-      ];
-
-      const points = [
-        ...data.map((p) => ({ ...p, outlier: false })),
-        ...anomalies.map((p) => ({ ...p, outlier: true }))
-      ];
-
-      const selected = new Set();
-      totalAnomalies.textContent = anomalies.length;
-
-      const toSvg = (x, y) => {
-        const padding = 24;
-        const width = 420 - padding * 2;
-        const height = 280 - padding * 2;
-        return {
-          cx: padding + (x / 100) * width,
-          cy: padding + (1 - y / 100) * height
-        };
+      const config = {
+        A: { grid: 3, speed: 900, size: 72 },
+        B: { grid: 4, speed: 650, size: 60 }
       };
 
-      const render = () => {
-        plot.innerHTML = "";
-        const axis = document.createElementNS("http://www.w3.org/2000/svg", "rect");
-        axis.setAttribute("x", "18");
-        axis.setAttribute("y", "18");
-        axis.setAttribute("width", "384");
-        axis.setAttribute("height", "244");
-        axis.setAttribute("rx", "14");
-        axis.setAttribute("class", "hunt-frame");
-        plot.appendChild(axis);
+      const cells = [];
+      let timer = null;
+      let spawn = null;
+      let remaining = 30;
+      let hitCount = 0;
+      let missCount = 0;
+      let activeIndex = null;
 
-        points.forEach((point, index) => {
-          const { cx, cy } = toSvg(point.x, point.y);
-          const circle = document.createElementNS(
-            "http://www.w3.org/2000/svg",
-            "circle"
-          );
-          circle.setAttribute("cx", cx);
-          circle.setAttribute("cy", cy);
-          circle.setAttribute("r", "7");
-          circle.setAttribute("class", "hunt-point");
-          circle.dataset.index = index;
-          if (selected.has(index)) {
-            circle.classList.add("is-selected");
+      const buildGrid = () => {
+        const { grid, size } = config[variant];
+        whackBoard.innerHTML = "";
+        whackBoard.style.gridTemplateColumns = `repeat(${grid}, ${size}px)`;
+        for (let i = 0; i < grid * grid; i += 1) {
+          const cell = document.createElement("button");
+          cell.type = "button";
+          cell.className = "whack-cell";
+          cell.setAttribute("aria-label", "whack cell");
+          cell.addEventListener("click", () => handleClick(i));
+          whackBoard.appendChild(cell);
+          cells.push(cell);
+        }
+      };
+
+      const setActive = (index) => {
+        if (activeIndex !== null) {
+          cells[activeIndex].classList.remove("is-active");
+        }
+        activeIndex = index;
+        cells[index].classList.add("is-active");
+      };
+
+      const handleClick = (index) => {
+        if (!timer) return;
+        if (index === activeIndex) {
+          hitCount += 1;
+        } else {
+          missCount += 1;
+        }
+        updateStats();
+      };
+
+      const updateStats = () => {
+        hits.textContent = hitCount;
+        misses.textContent = missCount;
+        const total = hitCount + missCount;
+        const acc = total === 0 ? 0 : (hitCount / total) * 100;
+        accuracy.textContent = `${acc.toFixed(0)}%`;
+      };
+
+      const stopGame = () => {
+        clearInterval(timer);
+        clearInterval(spawn);
+        timer = null;
+        spawn = null;
+        gameNote.textContent =
+          "Session complete. Compare your results with the experiment summary.";
+        updateSummary();
+      };
+
+      const updateSummary = () => {
+        const baseA = 8;
+        const baseB = 11;
+        const adjustedA = variant === "A" ? baseA + Math.round(hitCount / 6) : baseA;
+        const adjustedB = variant === "B" ? baseB + Math.round(hitCount / 6) : baseB;
+        avgHitsA.textContent = adjustedA;
+        avgHitsB.textContent = adjustedB;
+        const delta = adjustedB - adjustedA;
+        accDelta.textContent = `${delta >= 0 ? "-" : "+"}${Math.abs(delta)}%`;
+        recommendation.textContent =
+          delta >= 2 ? "Ship B with tuning" : "Keep A for accuracy";
+      };
+
+      const start = () => {
+        if (timer) return;
+        remaining = 30;
+        hitCount = 0;
+        missCount = 0;
+        updateStats();
+        timeLeft.textContent = remaining;
+        timer = setInterval(() => {
+          remaining -= 1;
+          timeLeft.textContent = remaining;
+          if (remaining <= 0) {
+            stopGame();
           }
-          if (plot.classList.contains("reveal") && point.outlier) {
-            circle.classList.add("is-outlier");
-          }
-          circle.addEventListener("click", () => {
-            if (selected.has(index)) {
-              selected.delete(index);
-            } else {
-              selected.add(index);
-            }
-            updateCounts();
-            render();
-          });
-          plot.appendChild(circle);
-        });
+        }, 1000);
+        spawn = setInterval(() => {
+          const next = Math.floor(Math.random() * cells.length);
+          setActive(next);
+        }, config[variant].speed);
       };
 
-      const updateCounts = () => {
-        selectedCount.textContent = selected.size;
-        let correct = 0;
-        selected.forEach((index) => {
-          if (points[index].outlier) {
-            correct += 1;
-          }
-        });
-        foundCount.textContent = correct;
+      const reset = () => {
+        clearInterval(timer);
+        clearInterval(spawn);
+        timer = null;
+        spawn = null;
+        remaining = 30;
+        hitCount = 0;
+        missCount = 0;
+        updateStats();
+        timeLeft.textContent = remaining;
+        if (activeIndex !== null) {
+          cells[activeIndex].classList.remove("is-active");
+          activeIndex = null;
+        }
+        gameNote.textContent = "Hit rate and accuracy help compare UX variants.";
       };
 
-      const score = () => {
-        let tp = 0;
-        let fp = 0;
-        let fn = 0;
-        points.forEach((point, index) => {
-          const picked = selected.has(index);
-          if (picked && point.outlier) tp += 1;
-          if (picked && !point.outlier) fp += 1;
-          if (!picked && point.outlier) fn += 1;
-        });
-        const precision = tp / Math.max(1, tp + fp);
-        const recall = tp / Math.max(1, tp + fn);
-        const f1 =
-          (2 * precision * recall) / Math.max(0.001, precision + recall);
+      variantLabel.textContent = variant;
+      variantSpeed.textContent = `${config[variant].speed}ms`;
+      variantGrid.textContent = `${config[variant].grid}x${config[variant].grid}`;
 
-        huntResults.innerHTML = `
-          <h4>Results</h4>
-          <p>Precision: ${(precision * 100).toFixed(0)}%</p>
-          <p>Recall: ${(recall * 100).toFixed(0)}%</p>
-          <p>F1 Score: ${(f1 * 100).toFixed(0)}%</p>
-          <p class="hunt-tip">Tip: catch more outliers without over-flagging normals.</p>
-        `;
-      };
-
-      scoreBtn.addEventListener("click", score);
-      revealBtn.addEventListener("click", () => {
-        plot.classList.add("reveal");
-        render();
-      });
-      resetBtn.addEventListener("click", () => {
-        selected.clear();
-        plot.classList.remove("reveal");
-        huntResults.innerHTML =
-          "<p>Precision and recall will appear here after you score your picks.</p>";
-        updateCounts();
-        render();
-      });
-
-      updateCounts();
-      render();
+      buildGrid();
+      startGame.addEventListener("click", start);
+      resetGame.addEventListener("click", reset);
     </script>
   </body>
 </html>
