--- a/index.html
+++ b/index.html
@@ -48,16 +48,6 @@
               >Connect on LinkedIn</a
             >
           </div>
-          <div class="meta">
-            <span>Los Angeles, CA 90007</span>
-            <span>(213) 691-7769</span>
-            <a
-              href="https://www.linkedin.com/in/swachandrika-rudra/"
-              target="_blank"
-              rel="noreferrer"
-              >LinkedIn</a
-            >
-          </div>
         </div>
         <aside class="hero-card">
           <img
@@ -65,11 +55,12 @@
             alt="Portrait of Swachandrika Rudra"
           />
           <div class="hero-card-body">
-            <h2>Focus Areas</h2>
-            <ul>
-              <li>Product analytics & experimentation</li>
-              <li>ML-driven pipelines & automation</li>
-              <li>Data visualization & storytelling</li>
+            <h2>Areas of Focus</h2>
+            <ul class="focus-list">
+              <li><span>🧬</span><strong>Computational Biology</strong></li>
+              <li><span>🏥</span><strong>Healthcare AI</strong></li>
+              <li><span>🤖</span><strong>Automation &amp; Machine Learning</strong></li>
+              <li><span>☁️</span><strong>Cloud &amp; Data Engineering</strong></li>
             </ul>
           </div>
         </aside>
