--- a/index.html
+++ b/index.html
@@ -48,13 +48,7 @@
               >Connect on LinkedIn</a
             >
           </div>
-        </div>
-        <aside class="hero-card">
-          <img
-            src="assets/headshot.jpg"
-            alt="Portrait of Swachandrika Rudra"
-          />
-          <div class="hero-card-body">
+          <div class="focus-inline">
             <h2>Areas of Focus</h2>
             <ul class="focus-list">
               <li><span>🧬</span><strong>Computational Biology</strong></li>
@@ -63,6 +57,12 @@
               <li><span>☁️</span><strong>Cloud &amp; Data Engineering</strong></li>
             </ul>
           </div>
+        </div>
+        <aside class="hero-card">
+          <img
+            src="assets/headshot.jpg"
+            alt="Portrait of Swachandrika Rudra"
+          />
         </aside>
       </section>
 
