--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </div>
         <aside class="hero-card">
           <img
-            src="assets/headshot.jpg"
-            alt="Portrait of Swachandrika Rudra"
+            src="assets/avatar.png"
+            alt="Pixel avatar of Swachandrika Rudra"
           />
         </aside>
       </section>
