--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
             </ul>
           </div>
         </div>
-        <aside class="hero-card">
+        <figure class="hero-figure">
           <img
             src="assets/avatar.png"
             alt="Pixel avatar of Swachandrika Rudra"
           />
-        </aside>
+        </figure>
       </section>
 
       <section id="about" class="section">
