--- a/index.html
+++ b/index.html
@@ -48,15 +48,6 @@
               >Connect on LinkedIn</a
             >
           </div>
-          <div class="focus-inline">
-            <h2>Areas of Focus</h2>
-            <ul class="focus-list">
-              <li><span>🧬</span><strong>Computational Biology</strong></li>
-              <li><span>🏥</span><strong>Healthcare AI</strong></li>
-              <li><span>🤖</span><strong>Automation &amp; Machine Learning</strong></li>
-              <li><span>☁️</span><strong>Cloud &amp; Data Engineering</strong></li>
-            </ul>
-          </div>
         </div>
         <figure class="hero-figure">
           <img
@@ -64,6 +55,36 @@
             alt="Pixel avatar of Swachandrika Rudra"
           />
         </figure>
+        <div class="focus-inline">
+          <div class="focus-marquee" aria-label="Areas of focus">
+            <div class="focus-track">
+              <span>Healthcare Analytics</span>  
+              <span>Computational Biology</span> 
+              <span>Machine Learning</span>
+              <span>Gen AI</span>
+              <span>Data Analytics &amp; Visualization</span> 
+              <span>Software Development</span>
+              <span>Cloud &amp; Data Engineering</span>
+              <span>Automation</span>
+              <span>Healthcare Analytics</span>  
+              <span>Computational Biology</span> 
+              <span>Machine Learning</span>
+              <span>Gen AI</span>
+              <span>Data Analytics &amp; Visualization</span> 
+              <span>Software Development</span>
+              <span>Cloud &amp; Data Engineering</span>
+              <span>Automation</span>
+              <span>Healthcare Analytics</span>  
+              <span>Computational Biology</span> 
+              <span>Machine Learning</span>
+              <span>Gen AI</span>
+              <span>Data Analytics &amp; Visualization</span> 
+              <span>Software Development</span>
+              <span>Cloud &amp; Data Engineering</span>
+              <span>Automation</span>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section id="about" class="section">
